[package]
name = "simple-expand-tilde"
version = "0.5.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/eschwart/simple-expand-tilde"
authors = ["Evan Schwartzentruber <ejsch03@gmail.com>"]
description = "Cross-platform and reliable tilde-expansion solution."
keywords = ["expand", "tilde", "fast", "path", "lightweight"]
categories = ["accessibility"]
exclude = [".github/", ".gitignore", "LICENSE", "tests/"]

[profile.release]
lto = true
codegen-units = 1
